force-app/main/default/objects/Sales_Quota__c/Sales_Quota__c.object-meta.xml
<CustomObject>
    <label>Sales Quota</label>
    <nameField>
        <displayFormat>SQ-{0000000}</displayFormat>
        <label>Sales Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>