force-app/main/default/objects/Sales_Quota__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <summarizedField>OA_Monthly_Quota__c.OA_Monthly_Quota__c</summarizedField>
    <summaryForeignKey>OA_Monthly_Quota__c.OA_Sales_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>