force-app/main/default/objects/Sales_Quota__c/fields/Gap_Surplus__c.field-meta.xml
<CustomField>
    <fullName>Gap_Surplus__c</fullName>
    <formula>Total_Booked_Revenue__c - Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap/Surplus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>