force-app/main/default/objects/Sales_Quota__c/fields/OA_Account__c.field-meta.xml
<CustomField>
    <fullName>OA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Quotas</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>