force-app/main/default/objects/Sales_Quota__c/fields/OA_Annual_Sales_Quota__c.field-meta.xml
<CustomField>
    <fullName>OA_Annual_Sales_Quota__c</fullName>
    <label>Annual Sales Quota(Target))</label>
    <summarizedField>OA_Monthly_Quota__c.OA_Monthly_Quota__c</summarizedField>
    <summaryForeignKey>OA_Monthly_Quota__c.OA_Sales_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>