force-app/main/default/objects/Sales_Quota__c/fields/OA_CSO__c.field-meta.xml
<CustomField>
    <fullName>OA_CSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>