force-app/main/default/objects/Sales_Quota__c/fields/OA_Gap__c.field-meta.xml
<CustomField>
    <fullName>OA_Gap__c</fullName>
    <formula>IF( Gap_Surplus__c &lt;0,   ABS( Gap_Surplus__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>