force-app/main/default/objects/Sales_Quota__c/fields/OA_Region__c.field-meta.xml
<CustomField>
    <fullName>OA_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East NA</fullName>
            </value>
            <value>
                <fullName>West NA</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>APAC &amp; MEA</fullName>
            </value>
            <value>
                <fullName>Unidentified</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
                <isActive>false</isActive>
                <label>Global</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>