force-app/main/default/objects/Sales_Quota__c/fields/OA_Regional_Head__c.field-meta.xml
<CustomField>
    <fullName>OA_Regional_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Targets1</relationshipName>
    <type>Lookup</type>
</CustomField>