force-app/main/default/objects/Sales_Quota__c/fields/OA_Surplus__c.field-meta.xml
<CustomField>
    <fullName>OA_Surplus__c</fullName>
    <formula>IF( Gap_Surplus__c &gt;0, Gap_Surplus__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>