force-app/main/default/objects/Sales_Quota__c/fields/OA_Target_Type__c.field-meta.xml
<CustomField>
    <fullName>OA_Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Region/Territory</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>