force-app/main/default/objects/Sales_Quota__c/fields/OA_Total_Forecast__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Forecast__c</fullName>
    <label>Total Forecast</label>
    <summarizedField>OA_Monthly_Quota__c.OA_Forecast__c</summarizedField>
    <summaryForeignKey>OA_Monthly_Quota__c.OA_Sales_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>