force-app/main/default/objects/Sales_Quota__c/fields/OA_Total_Pre_Sold_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Pre_Sold_Revenue__c</fullName>
    <label>Total Pre-Sold Revenue</label>
    <summarizedField>OA_Monthly_Quota__c.OA_Presold_Target_Revenue__c</summarizedField>
    <summaryForeignKey>OA_Monthly_Quota__c.OA_Sales_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>