force-app/main/default/objects/Sales_Quota__c/fields/OA_Total_Sold__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Sold__c</fullName>
    <formula>OA_Total_Pre_Sold_Revenue__c + OA_Total_Sold_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Sold + PreSold Revenue</inlineHelpText>
    <label>Total Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>