force-app/main/default/objects/Sales_Quota__c/fields/Region_of_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Region_of_Account_Owner__c</fullName>
    <formula>Text(OA_CSO__r.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>