force-app/main/default/objects/Sales_Quota__c/fields/Total_Booked_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Booked_Revenue__c</fullName>
    <formula>OA_Total_Pre_Sold_Revenue__c  +  OA_Total_Sold_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booked Revenue(Achieved)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>