force-app/main/default/objects/Sales_Quota__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>OA_Account__c +  OA_CSO__c +  TEXT(OA_Region__c)  +  TEXT(OA_Year__c)</formula>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>