force-app/main/default/objects/Sales_Quota__c/fields/Unique_Key_Text__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key_Text__c</fullName>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>