force-app/main/default/objects/Sales_Quota__c/recordTypes/Account_Target.recordType-meta.xml
<RecordType>
    <fullName>Account_Target</fullName>
    <active>true</active>
    <label>Account Target</label>
</RecordType>