force-app/main/default/objects/Sales_Quota__c/recordTypes/Agent_Target.recordType-meta.xml
<RecordType>
    <fullName>Agent_Target</fullName>
    <active>true</active>
    <label>CSO Target</label>
</RecordType>