force-app/main/default/objects/Sales_Quota__c/recordTypes/Regional_Target.recordType-meta.xml
<RecordType>
    <fullName>Regional_Target</fullName>
    <active>true</active>
    <label>Regional Target</label>
</RecordType>