force-app/main/default/objects/Sales_Quota__c/listViews/Account_Target.listView-meta.xml
<ListView>
    <fullName>Account_Target</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Quota__c.Account_Target</value>
    </filters>
    <label>Account Target</label>
</ListView>