force-app/main/default/objects/Sales_Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OA_Year__c</columns>
    <columns>OA_Region__c</columns>
    <columns>NAME</columns>
    <columns>OA_CSO__c</columns>
    <columns>OA_Annual_Sales_Quota__c</columns>
    <columns>OA_Total_Sold__c</columns>
    <columns>OA_Total_Pre_Sold_Revenue__c</columns>
    <columns>OA_Total_Sold_Revenue__c</columns>
    <columns>OA_Total_Risk_Adjusted_Pipeline__c</columns>
    <columns>OA_Total_Gross_Pipeline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>